PDF View: fixed hyperlinks not working on Windows